# egui

./: ARCHITECTURE.md  Cargo.toml  deny.toml
crates/eframe/: Cargo.toml
crates/eframe/src/: epi.rs  epi_integration.rs  lib.rs  run.rs
crates/egui/: Cargo.toml
crates/egui-wgpu/: Cargo.toml
crates/egui-winit/: Cargo.toml
crates/egui-winit/src/: lib.rs
crates/egui/src/: animation_manager.rs  context.rs  frame_state.rs  grid.rs  id.rs  input_state.rs  introspection.rs  layers.rs  layout.rs  lib.rs  memory.rs  menu.rs  painter.rs  placer.rs  response.rs  style.rs  ui.rs  widget_text.rs
crates/egui/src/containers/: area.rs  collapsing_header.rs  mod.rs  panel.rs  popup.rs  resize.rs  scroll_area.rs  window.rs
crates/egui/src/data/: input.rs  output.rs
crates/egui/src/input_state/: touch_state.rs
crates/egui/src/util/: id_type_map.rs  mod.rs
crates/egui/src/widgets/: color_picker.rs  drag_value.rs  mod.rs
crates/egui_demo_app/: Cargo.toml
crates/egui_demo_app/src/: backend_panel.rs  lib.rs  wrap_app.rs
crates/egui_demo_app/src/apps/: custom3d_wgpu.rs  mod.rs
crates/egui_demo_lib/: Cargo.toml
crates/egui_demo_lib/benches/: benchmark.rs
crates/egui_demo_lib/src/: color_test.rs  lib.rs
crates/egui_demo_lib/src/demo/: about.rs  code_editor.rs  code_example.rs  context_menu.rs  dancing_strings.rs  demo_app_windows.rs  drag_and_drop.rs  font_book.rs  layout_test.rs  misc_demo_window.rs  mod.rs  multi_touch.rs  paint_bezier.rs  painting.rs  plot_demo.rs  scrolling.rs  sliders.rs  strip_demo.rs  table_demo.rs  tests.rs  text_edit.rs  widget_gallery.rs  window_options.rs  window_with_panels.rs
crates/egui_extras/: Cargo.toml
crates/egui_extras/src/: image.rs  layout.rs  lib.rs  sizing.rs
crates/egui_extras/src/datepicker/: button.rs  popup.rs
crates/emath/: Cargo.toml
crates/emath/src/: rect_transform.rs
crates/epaint/: Cargo.toml
crates/epaint/src/: color.rs  image.rs  lib.rs  shape.rs  texture_handle.rs  textures.rs
crates/epaint/src/text/: cursor.rs  font.rs  (+1 more)
examples/confirm_exit/: Cargo.toml
examples/confirm_exit/src/: main.rs
examples/custom_font/: Cargo.toml
examples/custom_font/src/: main.rs
examples/custom_font_style/: Cargo.toml
examples/custom_font_style/src/: main.rs
examples/custom_window_frame/: Cargo.toml
examples/custom_window_frame/src/: main.rs
examples/download_image/: Cargo.toml
examples/download_image/src/: main.rs
examples/file_dialog/: Cargo.toml
examples/file_dialog/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/puffin_profiler/: Cargo.toml
examples/puffin_profiler/src/: main.rs
examples/retained_image/: Cargo.toml
examples/retained_image/src/: main.rs
examples/serial_windows/: Cargo.toml
examples/serial_windows/src/: main.rs
examples/svg/: Cargo.toml
examples/svg/src/: main.rs
sh/: build_demo_web.sh  check.sh  docs.sh  wasm_bindgen_check.sh
(+8 files in other folders)
